[package]
name = "indexed-kv"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	'Window',
	'IdbFactory',
	'IdbDatabase',
	'IdbTransaction',
	'IdbTransactionMode',
	'IdbOpenDbRequest',
	'IdbRequest',
	'IdbObjectStore',
	'Event',
	'EventTarget',
	'IdbCursor',
	'IdbCursorWithValue',
	'DomStringList',
	'DomException'
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
